--- a/Assets/Styleing/dashboard.css
+++ b/Assets/Styleing/dashboard.css
@@ -175,8 +175,7 @@
     gap: 20px;
 }
 
-._SubContainer ._SectionTwo ._Two ._UserCreate ._UserIcon button,
-._SubContainer ._SectionTwo ._Two ._UserCreate ._Marks ._Delete {
+._SubContainer ._SectionTwo ._Two ._UserCreate ._UserIcon button {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -564,46 +563,68 @@
 
 /* ------------------------------ exams styling ----------------------------- */
 
-._SubContainer ._SectionTwo ._Two ._UserCreate ._Marks {
-    display: none;
+._SubContainer ._SectionOne ._Marks {
+    position: absolute;
+    bottom: 0.7rem;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    border: 2px solid var(--five-color);
-    width: 40%;
-    min-height: 15vh;
-    padding: 1rem;
+    align-content: center;
+    gap: 1rem;
+    border: 1px solid var(--five-color);
+    width: 90%;
+    padding: 0rem;
     border-radius: 0.4rem;
     -webkit-border-radius: 0.4rem;
     -moz-border-radius: 0.4rem;
     -ms-border-radius: 0.4rem;
     -o-border-radius: 0.4rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    -webkit-transform: translate(-50%, 0%);
+    -moz-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    -o-transform: translate(-50%, 0%);
+    height: 60vh;
 }
 
-._SubContainer ._SectionTwo ._Two ._UserCreate ._Marks p {
+._SubContainer ._SectionOne ._Marks ._Title {
+    width: 100%;
+    text-align: center;
+    margin: 1rem 0rem;
+}
+
+._SubContainer ._SectionOne ._Marks ._Title p {
+    width: 100%;
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    text-transform: capitalize;
+    line-height: 2rem;
+    color: var(--White-color);
+}
+
+._SubContainer ._SectionOne ._Marks ._OneQ {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: fit-content;
+}
+
+._SubContainer ._SectionOne ._Marks ._OneQ p {
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
-    text-transform: capitalize;
-    line-height: 2rem;
-}
-
-._SubContainer ._SectionTwo ._Two ._UserCreate ._Marks ._Delete {
-    width: 40%;
-    align-self: flex-end;
+    text-transform: lowercase;
+    line-height: 1rem;
     color: var(--White-color);
-    transition: all 0.2s ease;
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -ms-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    border: 2px solid var(--Main-Color);
+    width: 80%;
 }
 
-._SubContainer ._SectionTwo ._Two ._UserCreate ._Marks ._Delete:hover {
-    color: var(--black-color);
-    border: 2px solid var(--Main-Color);
-    background-color: white;
+.icon-delete {
+    color: var(--White-color);
 }
 
 ._SubContainer ._SectionTwo ._Three ._Midea ._CardExam {
@@ -635,6 +656,10 @@
     -o-border-radius: 0.4rem;
 }
 
+._SubContainer ._SectionTwo ._Two ._UserCreate ._MarksInResponsive {
+    display: none;
+}
+
 ._SubContainer ._SectionTwo ._Three ._Midea ._CardExam ._MarkQ img {
     width: 25px;
     height: 25px;
@@ -650,7 +675,7 @@
     justify-content: space-between;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 2rem 0rem;
-    border: 2px solid var(--five-color);
+    border: 1px solid var(--five-color);
     border-radius: 0.4rem;
     -webkit-border-radius: 0.4rem;
     -moz-border-radius: 0.4rem;
@@ -680,10 +705,12 @@
 ._SubContainer ._SectionTwo ._Three ._Midea ._CardExam ._Questions ._Question ._QuestionTitle p {
     width: 100%;
     font-size: 1rem;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     text-transform: capitalize;
     line-height: 1.5rem;
+    color: var(--Main-Color);
 }
 
 ._SubContainer ._SectionTwo ._Three ._Midea ._CardExam ._Questions ._Question ._Options {
@@ -694,17 +721,17 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
-
 }
 
 ._SubContainer ._SectionTwo ._Three ._Midea ._CardExam ._Questions ._Question ._Option {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
     width: 100%;
     min-height: 6dvh;
-    border: 2px solid var(--five-Color);
     outline: none;
-    background-color: var(--Main-Color);
-    color: var(--White-color);
-    font-size: 0.9rem;
+    color: var(--Main-Color);
+    font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     text-transform: lowercase;
@@ -716,12 +743,14 @@
     -ms-border-radius: 0.4rem;
     -o-border-radius: 0.4rem;
     cursor: pointer;
+    border: 1px solid var(--Main-Color);
+
 }
 
 ._SubContainer ._SectionTwo ._Three ._Midea ._CardExam ._Questions ._Question ._Option:hover {
-    border: 2px solid var(--Main-Color);
+    border: 1px solid var(--Secound-color);
     outline: none;
-    background-color: var(--five-Color);
+    background-color: var(--Secound-color);
     color: var(--black-color);
 
 }
@@ -894,6 +923,65 @@
     ._containerSearchedValues ._cardSearchedValues ._Disc,
     ._containerSearchedValues ._cardSearchedValues ._Date {
         font-size: 0.9rem;
+    }
+
+    ._SubContainer ._SectionTwo ._Two ._UserCreate ._MarksInResponsive {
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        align-self: center;
+        border: 2px solid var(--five-color);
+        width: 90%;
+        padding: 0rem;
+        border-radius: 0.4rem;
+        -webkit-border-radius: 0.4rem;
+        -moz-border-radius: 0.4rem;
+        -ms-border-radius: 0.4rem;
+        -o-border-radius: 0.4rem;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        height: 15vh;
+    }
+
+    ._SubContainer ._SectionTwo ._Two ._UserCreate ._MarksInResponsive ._Title {
+        width: 25%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        border-right: 2px solid var(--five-color);
+    }
+
+    ._SubContainer ._SectionTwo ._Two ._UserCreate ._MarksInResponsive ._Title p {
+        width: 100%;
+        font-size: 1.2rem;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 600;
+        text-transform: capitalize;
+        line-height: 2rem;
+        color: var(--black-color);
+    }
+
+    ._SubContainer ._SectionTwo ._Two ._UserCreate ._MarksInResponsive ._OneQ {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        width: 5rem;
+    }
+
+    ._SubContainer ._SectionTwo ._Two ._UserCreate ._MarksInResponsive ._OneQ p {
+        text-align: center;
+        font-size: 1rem;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 500;
+        text-transform: lowercase;
+        line-height: 1rem;
+        color: var(--black-color);
+        width: 100%;
+    }
+
+    .icon-delete {
+        color: var(--Main-Color);
     }
 }
 
