--- a/Assets/Styleing/loginPage.css
+++ b/Assets/Styleing/loginPage.css
@@ -25,7 +25,34 @@
     background-size: cover;
     background-position: bottom;
 }
+/* ------------------------------- loader icon ------------------------------ */
+._mainContainer ._loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #000000da;
+    z-index: 10000;
+}
 
+._mainContainer ._loader ._loaderIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+}
+
+._mainContainer ._loader ._loaderIcon img {
+    width: 150px;
+    height: 150px;
+}
+
+
+
+/* -------------------------------------------------------------------------- */
 ._mainContainer ._Container {
     display: flex;
     gap: 1rem;
