--- a/Assets/Styleing/signupPage.css
+++ b/Assets/Styleing/signupPage.css
@@ -15,6 +15,8 @@
     --black-color: #000;
 }
 
+
+
 ._mainContainer {
     min-height: 100vh;
     display: flex;
@@ -26,6 +28,34 @@
     background-position: bottom;
 }
 
+/* ------------------------------- loader icon ------------------------------ */
+._mainContainer ._loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #000000da;
+    z-index: 10000;
+}
+
+._mainContainer ._loader ._loaderIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+}
+
+._mainContainer ._loader ._loaderIcon img {
+    width: 150px;
+    height: 150px;
+}
+
+
+
+/* -------------------------------------------------------------------------- */
 ._mainContainer ._Container {
     display: flex;
     gap: 1rem;
@@ -209,6 +239,23 @@
 ._mainContainer ._Container ._FormContainer ._Form ._inputField {
     position: relative;
     width: 100%;
+}
+
+._mainContainer ._Container ._FormContainer ._Form ._Link {
+    text-align: right;
+    position: relative;
+    width: 100%;
+    padding: 0.5rem;
+}
+
+._mainContainer ._Container ._FormContainer ._Form ._Link a {
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: capitalize;
+    color: var(--Main-Color);
+    text-decoration: none;
+    line-height: 1.3rem;
 }
 
 ._mainContainer ._Container ._FormContainer ._Form ._inputField input {
