--- a/Assets/Styleing/resultPage.css
+++ b/Assets/Styleing/resultPage.css
@@ -68,7 +68,137 @@
     -o-border-radius: 0.8rem;
 }
 
+#Target {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: fit-content;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    color: var(--five-color);
+    background: none;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    border: 2px solid var(--five-color);
+    border-radius: 0.4rem;
+    -webkit-border-radius: 0.4rem;
+    -moz-border-radius: 0.4rem;
+    -ms-border-radius: 0.4rem;
+    -o-border-radius: 0.4rem;
+    cursor: pointer;
+    outline: none;
+}
 
+#Target:hover {
+    background-color: var(--third-color);
+    border: 2px solid var(--third-color);
+    color: var(--Main-Color);
+}
+
+/* ---------------------------------- pobup --------------------------------- */
+
+._ContainerPobup {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: rgba(0, 0, 0, 0.301);
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    display: none;
+    z-index: 100000;
+}
+
+._ContainerPobup ._Card {
+    width: 50%;
+    height: 55vh;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+    gap: 10px;
+}
+
+._ContainerPobup ._Card ._Text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+._ContainerPobup ._Card ._Text ._allQuestions {
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+._ContainerPobup ._Card ._Text ._allQuestions p {
+    width: fit-content;
+    padding: 0.5rem 1rem;
+    margin: 0px;
+    border: 1px solid var(--five-color);
+    border-radius: 0.4rem;
+    -webkit-border-radius: 0.4rem;
+    -moz-border-radius: 0.4rem;
+    -ms-border-radius: 0.4rem;
+    -o-border-radius: 0.4rem;
+}
+
+._ContainerPobup ._Card ._Text h2 {
+    position: relative;
+    max-width: 100%;
+    margin: 0;
+    padding: 0.8em 1em 0;
+    color: inherit;
+    font-size: 1.875em;
+    font-weight: 600;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    text-transform: capitalize;
+    word-wrap: break-word;
+    cursor: initial;
+}
+
+._ContainerPobup ._Card ._Text p {
+    margin: 0;
+    padding: 1em 1.6em 0.3em;
+    overflow: auto;
+    color: inherit;
+    font-size: 1.125em;
+    font-weight: normal;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    line-height: normal;
+    text-align: center;
+    word-wrap: break-word;
+    word-break: break-word;
+    cursor: initial;
+}
+
+/* -------------------------------------------------------------------------- */
 ._mainContainer ._Container ._image {
     display: flex;
     flex-direction: column;
